# nezha_blklong

./: .gitignore  .version  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  build-release.ps1  package.json  pnpm-lock.yaml  scripts  vite.config.ts  vite.remote.config.ts
src/: App.css  App.tsx  i18n.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_settings.rs  cc_switch.rs  event_watcher.rs  feishu.rs  fs.rs  git.rs  lib.rs  pty.rs  push.rs  quick_chat.rs  session.rs  skills.rs  storage.rs
src/components/: AppSettingsDialog.tsx  FileExplorer.tsx  FileViewer.tsx  NewTaskView.tsx  NotificationBell.tsx  ProjectPage.tsx  ProjectRail.tsx  QuickChat.tsx  RightToolbar.tsx  RunningView.tsx  ShellTerminalPanel.tsx  SidebarFooterActions.tsx  StatusIcon.tsx  TaskPanel.tsx  TerminalView.tsx  TimelineView.tsx  Toast.tsx  WelcomePage.tsx  terminalShared.ts
src/components/RunningView/: FileChangesPanel.tsx
src/components/app-settings/: AboutPanel.tsx  AgentConfigPanel.tsx  AgentPathSection.tsx  GeneralPanel.tsx  RemotePanel.tsx  ShortcutsPanel.tsx  ThemePanel.tsx  thanks-data.ts  types.ts
src/components/command-palette/: CommandPalette.tsx  commandPaletteState.ts  types.ts
src/components/file-explorer/: ContextMenu.tsx  SearchPanel.tsx  TreeItem.tsx  types.ts
src/components/git-diff/: DiffFileBlock.tsx
src/components/git-view/: GitFileBrowser.tsx
src/components/new-task/: AgentPermSelector.tsx  PromptEditor.tsx  ProviderSelector.tsx
src/components/project-rail/: ConversationList.tsx  ConversationRow.tsx  NotificationRow.tsx  ProjectDrawer.tsx  ProjectRailActions.tsx  drag.ts  (+1 more)
src/contexts/: AppSettingsContext.tsx
src/hooks/: useProjectPanels.ts  useSessionPolling.ts
src/remote/: RemoteApp.tsx  index.html  main.tsx
src/styles/: dialogs.ts  layout.ts  panels.ts  rail-drag.ts  task.ts  terminal.ts  themes.css
src/utils/: fonts.ts
(+15 files in other folders)
